--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
     <header>
         <div class="top-section">
             <div class="backarrow-logo-name">
@@ -79,7 +80,7 @@
         </div>
     </header>
 
-    <section class="main">
+    <section class="main" id="main">
         <div class="adv">
             <img src="https://rukminim1.flixcart.com/fk-p-ads/650/300/dp-doc/1663857857383-cl8d60bc72jod108kskg8j5d8-Redmi%2010_1.jpeg?q=90"
                 alt="">
@@ -98,7 +99,6 @@
                 <div class="details">
                     <div class="head-heart">
                         <p>REDMI 10A (Slate Grey,32 GB)</p>
-
                     </div>
                     <div class="rating-plus">
                         <span class="rating">4.1 ★</span>
@@ -107,7 +107,6 @@
                             <img src="https://rukminim1.flixcart.com/www/150/30/promos/07/06/2022/afa33081-fdc2-4dac-af42-7f99ff316372.png?q=90"
                                 alt="plus-logo-assured">
                         </div>
-
                     </div>
                     <div class="amount-details">
                         <span class="price">8,793</span>
@@ -131,8 +130,8 @@
         </div>
     </section>
 
+    <script type="module" src="scripts.js"></script>
 
-    <script src="scripts.js"></script>
 </body>
 
 </html>
