completed the sort menu display design

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <img src="https://rukminim1.flixcart.com/fk-p-ads/650/300/dp-doc/1663857857383-cl8d60bc72jod108kskg8j5d8-Redmi%2010_1.jpeg?q=90"
                 alt="">
         </div>
-        <div class="card">
+        <!-- <div class="card">
             <div class="mob-details">
                 <div class="heart">
                     <img src="https://rukminim1.flixcart.com/www/50/50/promos/24/06/2021/e383eca4-a4f2-4dcb-824d-d5b27a35e22b.png?q=90"
@@ -94,8 +94,7 @@
                 <div class="mob">
                     <img src="https://rukminim1.flixcart.com/image/200/250/l2f20sw0/mobile/h/c/6/10a-b09xb7hv7q-redmi-original-imagdrgp8pkbzccw.jpeg?q=90&crop=false"
                         alt="Redmi 10A" loading="lazy">
-                    <!-- https://rukminim1.flixcart.com/www/50/50/promos/04/02/2019/9f870a08-4cf9-45bd-ac99-1428d6153ac5.png?q=90 -->
-                </div>
+                                    </div>
                 <div class="details">
                     <div class="head-heart">
                         <p>REDMI 10A (Slate Grey,32 GB)</p>
@@ -127,11 +126,36 @@
                 <span>5000 mAh</span>
                 <span>13MP Rear Camera</span>
             </div>
-        </div>
+        </div> -->
     </section>
+
+    <div class="sort-menu">
+        <div class="sort-list">
+            <p>SORT BY</p>
+            <label>
+                <span>Popularity</span>
+                <input type="radio" name="sort-by" checked="checked">
+            </label>
+            <label>
+                <span>Price -- Low to High</span>
+                <input type="radio" name="sort-by">
+            </label>
+            <label>
+                <span>Price -- High to Low</span>
+                <input type="radio" name="sort-by">
+            </label>
+            <label>
+                <span>Newest First</span>
+                <input type="radio" name="sort-by">
+            </label>
+        </div>
+    </div>
 
     <script type="module" src="scripts.js"></script>
 
 </body>
 
 </html>
+
+<!-- RED HEART -->
+<!-- https://rukminim1.flixcart.com/www/50/50/promos/04/02/2019/9f870a08-4cf9-45bd-ac99-1428d6153ac5.png?q=90 -->
