completed the mobile view with btn clicks

--- a/index.html
+++ b/index.html
@@ -58,20 +58,22 @@
         </div>
         <div class="bottom-section" id="bottom-section">
             <div class="sort-filter">
-                <div class="sort">
+                <div class="sort" id="sort">
                     <div class="icon">
                         <img src="https://rukminim1.flixcart.com/www/50/50/promos/10/04/2019/d775ea02-5588-4cda-95ad-1ae03bb67e17.png?q=90"
                             alt="sort-icon">
                     </div>
                     <p>Sort</p>
                 </div>
-                <div class="filter">
-                    <div class="icon">
-                        <img src="https://rukminim1.flixcart.com/www/50/50/promos/10/04/2019/62f36a1e-caf6-4433-a848-2adb7e164a4d.png?q=90"
-                            alt="filter-icon">
+                <a href="filter.html">
+                    <div class="filter">
+                        <div class="icon">
+                            <img src="https://rukminim1.flixcart.com/www/50/50/promos/10/04/2019/62f36a1e-caf6-4433-a848-2adb7e164a4d.png?q=90"
+                                alt="filter-icon">
+                        </div>
+                        <p>Filter</p>
                     </div>
-                    <p>Filter</p>
-                </div>
+                </a>
             </div>
             <div class="header-shadow">
                 <img src="https://rukminim1.flixcart.com/www/30/10/promos/01/08/2018/e364d9fe-1225-4814-bfee-2c461bf1c442.png?q=90"
@@ -129,7 +131,7 @@
         </div> -->
     </section>
 
-    <div class="sort-menu">
+    <div class="sort-menu" id="sort-menu">
         <div class="sort-list">
             <p>SORT BY</p>
             <label>
