completed the structute in js

--- a/filter.html
+++ b/filter.html
@@ -55,34 +55,34 @@
             <p>Category</p>
         </div>
         <div class="price-filter-list">
-            <div class="checkbox" id="checkbox">
+            <div class="checkbox" id="checkbox" data-checked="false">
                 <img src="https://static-assets-web.flixcart.com/www/linchpin/batman-returns/cross-platform-images/images/unchecked-58d79d4f.png?q=90"
                     loading="lazy" alt="">
                 <p>Rs.10000 and Below</p>
             </div>
-            <div class="checkbox" id="checkbox">
+            <div class="checkbox" id="checkbox" data-checked="false">
                 <img src="https://static-assets-web.flixcart.com/www/linchpin/batman-returns/cross-platform-images/images/unchecked-58d79d4f.png?q=90"
                     loading="lazy" alt="">
                 <p>Rs. 10000 - Rs. 15000</p>
             </div>
-            <div class="checkbox" id="checkbox">
+            <div class="checkbox" id="checkbox" data-checked="false">
                 <img src="https://static-assets-web.flixcart.com/www/linchpin/batman-returns/cross-platform-images/images/unchecked-58d79d4f.png?q=90"
                     loading="lazy" alt="">
                 <p>Rs. 15000 - Rs. 20000</p>
             </div>
-            <div class="checkbox" id="checkbox">
+            <div class="checkbox" id="checkbox" data-checked="false">
                 <img src="https://static-assets-web.flixcart.com/www/linchpin/batman-returns/cross-platform-images/images/unchecked-58d79d4f.png?q=90"
                     loading="lazy" alt="">
                 <p>Rs. 20000 - Rs. 30000</p>
             </div>
-            <div class="checkbox" id="checkbox">
+            <div class="checkbox" id="checkbox" data-checked="false">
                 <img src="https://static-assets-web.flixcart.com/www/linchpin/batman-returns/cross-platform-images/images/unchecked-58d79d4f.png?q=90"
                     loading="lazy" alt="">
                 <p>Rs. 30000 and Above</p>
             </div>
         </div>
     </section>
-    <script type="module" src="scripts.js"></script>
+    <script type="module" src="scripts2.js"></script>
 </body>
 
 </html>
