--- a/index.html
+++ b/index.html
@@ -136,19 +136,19 @@
             <p>SORT BY</p>
             <label>
                 <span>Popularity</span>
-                <input type="radio" name="sort-by" checked="checked">
+                <input type="radio" name="sort-by" id="sort-by" checked="checked" value="popularity">
             </label>
             <label>
                 <span>Price -- Low to High</span>
-                <input type="radio" name="sort-by">
+                <input type="radio" name="sort-by" id="sort-by" value="lowToHigh">
             </label>
             <label>
                 <span>Price -- High to Low</span>
-                <input type="radio" name="sort-by">
+                <input type="radio" name="sort-by" id="sort-by" value="highToLow">
             </label>
             <label>
                 <span>Newest First</span>
-                <input type="radio" name="sort-by">
+                <input type="radio" name="sort-by" id="sort-by" value="newestFirst">
             </label>
         </div>
     </div>
