--- a/filter.html
+++ b/filter.html
@@ -55,27 +55,27 @@
             <p>Category</p>
         </div>
         <div class="price-filter-list">
-            <div class="checkbox" id="checkbox" data-checked="false">
+            <div class="checkbox" id="checkbox" data-checked="false" data-low="0" data-high="10">
                 <img src="https://static-assets-web.flixcart.com/www/linchpin/batman-returns/cross-platform-images/images/unchecked-58d79d4f.png?q=90"
                     loading="lazy" alt="">
                 <p>Rs.10000 and Below</p>
             </div>
-            <div class="checkbox" id="checkbox" data-checked="false">
+            <div class="checkbox" id="checkbox" data-checked="false" data-low="10" data-high="15">
                 <img src="https://static-assets-web.flixcart.com/www/linchpin/batman-returns/cross-platform-images/images/unchecked-58d79d4f.png?q=90"
                     loading="lazy" alt="">
                 <p>Rs. 10000 - Rs. 15000</p>
             </div>
-            <div class="checkbox" id="checkbox" data-checked="false">
+            <div class="checkbox" id="checkbox" data-checked="false" data-low="15" data-high="20">
                 <img src="https://static-assets-web.flixcart.com/www/linchpin/batman-returns/cross-platform-images/images/unchecked-58d79d4f.png?q=90"
                     loading="lazy" alt="">
                 <p>Rs. 15000 - Rs. 20000</p>
             </div>
-            <div class="checkbox" id="checkbox" data-checked="false">
+            <div class="checkbox" id="checkbox" data-checked="false" data-low="20" data-high="30">
                 <img src="https://static-assets-web.flixcart.com/www/linchpin/batman-returns/cross-platform-images/images/unchecked-58d79d4f.png?q=90"
                     loading="lazy" alt="">
                 <p>Rs. 20000 - Rs. 30000</p>
             </div>
-            <div class="checkbox" id="checkbox" data-checked="false">
+            <div class="checkbox" id="checkbox" data-checked="false" data-low="30" data-high="1000">
                 <img src="https://static-assets-web.flixcart.com/www/linchpin/batman-returns/cross-platform-images/images/unchecked-58d79d4f.png?q=90"
                     loading="lazy" alt="">
                 <p>Rs. 30000 and Above</p>
