added the fav icon

--- a/filter.html
+++ b/filter.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Mobile Phones (MI मोबाइल) and Smartphones Online at Lowest Prices in India</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon"
+        href="https://static-assets-web.flixcart.com/batman-returns/batman-returns/p/images/logo_lite-cbb357.png"
+        type="image/png">
 </head>
 
 <body>
