added the structure

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                     alt="shadow">
             </div>
         </div>
+
         <div class="header-desktop-view">
             <div class="flip-plus">
                 <div class="flip">
@@ -134,7 +135,6 @@
                 </svg>
                 <span>Cart</span>
             </div>
-
         </div>
     </header>
 
@@ -188,64 +188,82 @@
     </section>
     <section class="main-desktop">
         <div class="dropdown-list">
-            <span>
+            <span class="dropdown-element">
                 Electronics
-                <svg width="4.7" height="8" viewBox="0 0 16 27" xmlns="http://www.w3.org/2000/svg"
-                    class="arrow-down active">
+                <svg width="4.7" height="8" viewBox="0 0 16 27" xmlns="http://www.w3.org/2000/svg" class="arrow-down">
                     <path d="M16 23.207L6.11 13.161 16 3.093 12.955 0 0 13.161l12.955 13.161z" fill="#fff"
                         class="arrow-down-path">
                     </path>
                 </svg>
             </span>
-            <span>
+            <span class="dropdown-element">
                 TVs & Appliances<svg width="4.7" height="8" viewBox="0 0 16 27" xmlns="http://www.w3.org/2000/svg"
                     class="arrow-down">
                     <path d="M16 23.207L6.11 13.161 16 3.093 12.955 0 0 13.161l12.955 13.161z" fill="#fff"
                         class="arrow-down-path"></path>
                 </svg>
             </span>
-            <span>
+            <span class="dropdown-element">
                 Men<svg width="4.7" height="8" viewBox="0 0 16 27" xmlns="http://www.w3.org/2000/svg"
                     class="arrow-down">
                     <path d="M16 23.207L6.11 13.161 16 3.093 12.955 0 0 13.161l12.955 13.161z" fill="#fff"
                         class="arrow-down-path"></path>
                 </svg>
             </span>
-            <span>
+            <span class="dropdown-element">
                 Women<svg width="4.7" height="8" viewBox="0 0 16 27" xmlns="http://www.w3.org/2000/svg"
                     class="arrow-down">
                     <path d="M16 23.207L6.11 13.161 16 3.093 12.955 0 0 13.161l12.955 13.161z" fill="#fff"
                         class="arrow-down-path"></path>
                 </svg>
             </span>
-            <span>
+            <span class="dropdown-element">
                 Baby & Kids<svg width="4.7" height="8" viewBox="0 0 16 27" xmlns="http://www.w3.org/2000/svg"
                     class="arrow-down">
                     <path d="M16 23.207L6.11 13.161 16 3.093 12.955 0 0 13.161l12.955 13.161z" fill="#fff"
                         class="arrow-down-path"></path>
                 </svg>
             </span>
-            <span>
+            <span class="dropdown-element">
                 Home & Furniture<svg width="4.7" height="8" viewBox="0 0 16 27" xmlns="http://www.w3.org/2000/svg"
                     class="arrow-down">
                     <path d="M16 23.207L6.11 13.161 16 3.093 12.955 0 0 13.161l12.955 13.161z" fill="#fff"
                         class="arrow-down-path"></path>
                 </svg>
             </span>
-            <span>
+            <span class="dropdown-element">
                 Sports,Books & More<svg width="4.7" height="8" viewBox="0 0 16 27" xmlns="http://www.w3.org/2000/svg"
                     class="arrow-down">
                     <path d="M16 23.207L6.11 13.161 16 3.093 12.955 0 0 13.161l12.955 13.161z" fill="#fff"
                         class="arrow-down-path"></path>
                 </svg>
             </span>
-            <a href="https://www.flipkart.com/travel/flights?otracker=nmenu_Flights">
+            <a class="dropdown-element" href="https://www.flipkart.com/travel/flights?otracker=nmenu_Flights">
                 Flights
             </a>
-            <a href="https://www.flipkart.com/offers-store?otracker=nmenu_offer-zone">
+            <a class="dropdown-element" href="https://www.flipkart.com/offers-store?otracker=nmenu_offer-zone">
                 Offer Zone
             </a>
         </div>
+        <div class="header-empty"></div>
+        <div class="filter-section-main">
+            <div class="filter-section-left">
+                <div class="grab-best">
+                    <img src="https://rukminim1.flixcart.com/flap/540/289/image/c3bcb6e03b8f43d4.png?q=50" alt="adv">
+                    <h3>Grab Best Mobile Deals</h3>
+                    <span>realme, Poco, vivo and more</span>
+                </div>
+                <div class="filters">
+
+                </div>
+            </div>
+            <div class="filter-section-right">
+                <a>Home</a> <a>Mobile & Accessories</a> <a>Mobiles</a>
+            </div>
+
+        </div>
+
+        <!-- <div class="todelete"></div> -->
 
     </section>
 
@@ -272,6 +290,7 @@
     </div>
 
     <script type="module" src="scripts.js"></script>
+    <script type="module" src="scriptdesktop.js"></script>
 
 </body>
 
