added the structure of main section top

--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
             </a>
         </div>
         <div class="header-empty"></div>
-        <div class="filter-section-main">
-            <div class="filter-section-left">
+        <div class="main-section-container">
+            <div class="filter-section">
                 <div class="grab-best">
                     <img src="https://rukminim1.flixcart.com/flap/540/289/image/c3bcb6e03b8f43d4.png?q=50" alt="adv">
                     <h3>Grab Best Mobile Deals</h3>
@@ -257,8 +257,47 @@
 
                 </div>
             </div>
-            <div class="filter-section-right">
-                <a>Home</a> <a>Mobile & Accessories</a> <a>Mobiles</a>
+            <div class="main-section">
+                <div class="navigation">
+                    <a>Home </a>
+                    <svg width="16" height="27" viewBox="0 0 16 27" xmlns="http://www.w3.org/2000/svg" class="_39X-Og">
+                        <path d="M16 23.207L6.11 13.161 16 3.093 12.955 0 0 13.161l12.955 13.161z" fill="#fff"
+                            class="navigation-arrow"></path>
+                    </svg>
+                    <a>Mobile & Accessories</a>
+                    <svg width="16" height="27" viewBox="0 0 16 27" xmlns="http://www.w3.org/2000/svg" class="_39X-Og">
+                        <path d="M16 23.207L6.11 13.161 16 3.093 12.955 0 0 13.161l12.955 13.161z" fill="#fff"
+                            class="navigation-arrow"></path>
+                    </svg>
+                    <a>Mobiles</a>
+                </div>
+                <div class="mobile-list">
+                    <a href="https://www.flipkart.com/q/redmi-mobile-phones-under-10000">Redmi Mobile Phones Under
+                        10000</a> |
+                    <a href="https://www.flipkart.com/q/redmi-mobile-phones-under-15000">Redmi Mobile Phones Under
+                        15000</a>|
+                    <a href="https://www.flipkart.com/q/redmi-mobile-phones-under-20000">Redmi Mobile Phones Under
+                        20000</a>|
+                    <a href="https://www.flipkart.com/redmi-10-pacific-blue-64-gb/p/itm0f2a6a2112b75">Redmi 10</a>|
+                    <a href="https://www.flipkart.com/redmi-9i-sport-carbon-black-64-gb/p/itm17ed463dc779a">redmi 9i
+                        Sport</a>|
+                    <a href="https://www.flipkart.com/xiaomi-11i-5g-pacific-pearl-128-gb/p/itm64ae12c24445b">Xiaomi 11i
+                        series</a>
+                </div>
+                <div class="mobile-showing">
+                    <h3>Mi Mobiles</h3>
+                    <span>&nbsp;&nbsp;&nbsp;(Showing 1 - 24 products of 419 products)</span>
+                </div>
+                <div class="sort-main">
+                    <span>Sort By</span>
+                    <div class="sort-list-main">
+                        <span class="active">Popularity</span>
+                        <span>Price -- Low to High</span>
+                        <span>Price -- High to Low</span>
+                        <span>Newest First</span>
+                    </div>
+
+                </div>
             </div>
 
         </div>
