updated the json structure

--- a/index.html
+++ b/index.html
@@ -298,6 +298,27 @@
                     </div>
 
                 </div>
+                <div class="mobile-section-container">
+                    <div class="mobile-card">
+                        <div class="mobile-img-details">
+                            <div class="mobile-img">
+                                <img src="https://rukminim1.flixcart.com/image/312/312/l2f20sw0/mobile/n/t/p/10a-b09xb6tk6v-redmi-original-imagdrghghkneesf.jpeg?q=70"
+                                    alt="">
+                                <div class="heart-desktop">
+                                    <img src="https://rukminim1.flixcart.com/www/50/50/promos/24/06/2021/e383eca4-a4f2-4dcb-824d-d5b27a35e22b.png?q=90"
+                                        alt="heart-grey">
+                                </div>
+                            </div>
+                            <div class="mobile-details">
+                                <h3>REDMI 10A (Sea Blue,64 GB)</h3>
+                                <span class="rating">4.2 ★</span>
+                                <span>2,972 Rating & 212 Reviews</span>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
