--- a/index.html
+++ b/index.html
@@ -248,11 +248,13 @@
         <div class="header-empty"></div>
         <div class="main-section-container">
             <div class="filter-section">
+
                 <div class="grab-best">
                     <img src="https://rukminim1.flixcart.com/flap/540/289/image/c3bcb6e03b8f43d4.png?q=50" alt="adv">
                     <h3>Grab Best Mobile Deals</h3>
                     <span>realme, Poco, vivo and more</span>
                 </div>
+
                 <div class="filters">
 
                 </div>
@@ -299,25 +301,62 @@
 
                 </div>
                 <div class="mobile-section-container">
+
                     <div class="mobile-card">
-                        <div class="mobile-img-details">
-                            <div class="mobile-img">
-                                <img src="https://rukminim1.flixcart.com/image/312/312/l2f20sw0/mobile/n/t/p/10a-b09xb6tk6v-redmi-original-imagdrghghkneesf.jpeg?q=70"
-                                    alt="">
-                                <div class="heart-desktop">
-                                    <img src="https://rukminim1.flixcart.com/www/50/50/promos/24/06/2021/e383eca4-a4f2-4dcb-824d-d5b27a35e22b.png?q=90"
-                                        alt="heart-grey">
+                        <div class="mobile-img-details-price">
+                            <div class="mobile-img-details">
+                                <div class="mobile-img">
+                                    <img src="https://rukminim1.flixcart.com/image/312/312/l2f20sw0/mobile/n/t/p/10a-b09xb6tk6v-redmi-original-imagdrghghkneesf.jpeg?q=70"
+                                        alt="">
+                                    <div class="heart-desktop">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="_1l0elc" width="16" height="16"
+                                            viewBox="0 0 20 16">
+                                            <path
+                                                d="M8.695 16.682C4.06 12.382 1 9.536 1 6.065 1 3.219 3.178 1 5.95 1c1.566 0 3.069.746 4.05 1.915C10.981 1.745 12.484 1 14.05 1 16.822 1 19 3.22 19 6.065c0 3.471-3.06 6.316-7.695 10.617L10 17.897l-1.305-1.215z"
+                                                fill="#2874F0" class="heart-qwerty" stroke="#FFF" fill-rule="evenodd"
+                                                opacity=".9"></path>
+                                        </svg>
+                                    </div>
+                                </div>
+                                <div class="mobile-details">
+                                    <p class="heading">REDMI 10A (Sea Blue,64 GB)</p>
+                                    <div class="rating-reviews">
+                                        <span class="rating">4.2 ★</span>
+                                        <span>2,972 Rating & 212 Reviews</span>
+                                    </div>
+                                    <ul>
+                                        <li>12 GB RAM | 256 GB Storage</li>
+                                        <li>17.09 cm (6.73 inch) Display</li>
+                                        <li>13MP Rear Camera</li>
+                                        <li>5000 mAh Battery</li>
+                                        <li>12 month</li>
+                                    </ul>
+
+
                                 </div>
                             </div>
-                            <div class="mobile-details">
-                                <h3>REDMI 10A (Sea Blue,64 GB)</h3>
-                                <span class="rating">4.2 ★</span>
-                                <span>2,972 Rating & 212 Reviews</span>
-
-
+                            <div class="mobile-price">
+                                <div class="flip-assured">
+                                    <p class="selling-price">₹8,689</p>
+                                    <img src="https://static-assets-web.flixcart.com/fk-p-linchpin-web/fk-cp-zion/img/fa_62673a.png"
+                                        alt="">
+                                </div>
+                                <div class="original-price">
+                                    <span class="original-amount">11,999</span>
+                                    <span class="discount">27%</span>
+                                </div>
+                                <sapn class="delivery">Free delivery</sapn>
+                                <sapn class="offer">Bank Offer</sapn>
                             </div>
                         </div>
+                        <div class="compare">
+                            <input type="checkbox" name="compare">
+                            <label for="compare">Add to Compare</label>
+                        </div>
                     </div>
+
+
+
                 </div>
             </div>
 
